<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_group_24"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_baseline_share_24"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_currentrequest"
            android:icon="@drawable/ic_baseline_access_time_filled_24"
            android:title="@string/menu_current_request" />
    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_access_time_filled_24"
            android:title="@string/menu_logout" />
    </group>

</menu>